fix covers

--- a/app/assets/stylesheets/api/playhead.scss
+++ b/app/assets/stylesheets/api/playhead.scss
@@ -143,6 +143,8 @@
 .playing-track-art {
     width: 35px;
     height: 35px;
+    background-image: linear-gradient(
+135deg, #846170, #70929c);
 }
 
 .playing-track-labels {
